--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     height: 100vh;
     width: 100%;
     position: relative;
-    background-image: url("assets/img/background.jpg");
+    background-image: url("https://github.com/ItaloBasilio/Netflix_login/blob/master/assets/img/background.jpg?raw=true");
     background-size: cover;
     background-repeat: no-repeat;
     font-family: Arial, Helvetica, sans-serif;
